--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,8 @@ android {
 }
 
 dependencies {
+    implementation "com.android.support:support-compat:28.0.0"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
@@ -31,4 +33,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.google.firebase:firebase-database:16.0.1'
+
+    implementation 'com.google.firebase:firebase-ml-vision:18.0.1'
+
+    compile 'com.github.blikoon:QRCodeScanner:0.1.2'
+
+//    implementation 'com.github.blikoon:QRCodeScanner:0.1.2'
+
 }
