--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,13 +6,13 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
-        android:hardwareAccelerated="true"
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -38,13 +38,15 @@
         <activity android:name=".InstitutionHome" />
         <activity android:name=".InstitutionOption" />
         <activity android:name=".SignInn" />
-        <activity android:name=".SignUpp"></activity>
+        <activity android:name=".SignUpp" />
+
         <meta-data
             android:name="com.google.firebase.ml.vision.DEPENDENCIES"
             android:value="barcode" />
 
+        <activity android:name=".GetQRCode" />
+        <activity android:name=".InstitutionOptionWithdraw" />
+        <activity android:name=".WithdwawDeposite"></activity>
     </application>
-
-
 
 </manifest>
